gnrfield tag class. fix alignment of field div

--- a/gnrjs/gnr_d11/css/gnrbase.css
+++ b/gnrjs/gnr_d11/css/gnrbase.css
@@ -613,6 +613,9 @@ label{
 .gnrfield {
 
 }
+.gnrfield.tag_div{
+    padding-top:2px;
+}
 
 /* @group loading classes */
 
